fixing stretch thumbnail images

--- a/VerticalMenu.css
+++ b/VerticalMenu.css
@@ -92,3 +92,18 @@
 			background-size: 400px 300px;
 /*			background-size: 400px 100%;*/
 		}
+	div.scpic
+		{
+			/*background-image: url("https://img.youtube.com/vi/nx8LYGtQdDs/hqdefault.jpg");*/
+			height:400px;
+			width:400px;
+			margin-bottom: 0px;
+			resize: none;
+			float: left; margin: 0px 0px 0px 0px;
+			margin-left:8px;
+			margin-top:8px;
+			margin-right:8px;
+			background-repeat:no-repeat;
+			background-size: 400px 400px;
+/*			background-size: 400px 100%;*/
+		}
